# rgitui

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MEMORY.md  PLAN.md  PRODUCT.md  README.md  README_TESTING.md  add_tests.py  memory.sh  patch_bisect.sh  patch_bisect_view.sh  patch_bisect_view_2.sh  shell.nix
.cargo/: config.toml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml
assets/themes/: catppuccin-latte.json  catppuccin-mocha.json  dracula.json  github-dark.json  one-dark.json
crates/rgitui/: Cargo.toml  build.rs
crates/rgitui/resources/linux/: AppRun  com.rgitui.app.metainfo.xml  rgitui.appdata.xml  rgitui.desktop
crates/rgitui/resources/windows/: rgitui.iss
crates/rgitui/src/: main.rs
crates/rgitui/tests/: integration_test.rs
crates/rgitui_ai/: Cargo.toml
crates/rgitui_ai/src/: lib.rs  tools.rs
crates/rgitui_diff/: Cargo.toml
crates/rgitui_diff/src/: lib.rs
crates/rgitui_git/: Cargo.toml
crates/rgitui_git/src/: graph.rs  lib.rs  project.rs  types.rs
crates/rgitui_git/src/project/: auth.rs  bisect.rs  blame.rs  diff.rs  file_history.rs  history_cache.rs  local_ops.rs  mod.rs  network.rs  rebase.rs  reflog.rs  refresh.rs  search.rs  submodule.rs  watcher.rs
crates/rgitui_graph/: Cargo.toml
crates/rgitui_graph/src/: lib.rs
crates/rgitui_settings/: Cargo.toml
crates/rgitui_settings/src/: lib.rs  shortcuts.rs
crates/rgitui_theme/: Cargo.toml
crates/rgitui_theme/src/: colors.rs  json_theme.rs  lib.rs  theme.rs
crates/rgitui_ui/: Cargo.toml  patch2.patch
crates/rgitui_ui/src/: avatar_cache.patch  avatar_cache.rs  badge.rs  button.rs  checkbox.rs  context_menu.rs  diff_stat.rs  disclosure.rs  divider.rs  icon.rs  indicator.rs  label.rs  lib.rs  list_item.rs  modal.rs  patch.patch  scroll_list.rs  scrollbar.rs  spinner.rs  stack.rs  tab_bar.rs  text_area.rs  text_input.rs  toast.rs  tooltip.rs  window_controls.rs
crates/rgitui_workspace/: Cargo.toml
crates/rgitui_workspace/src/: avatar_resolver.rs  bisect_view.rs  blame_view.rs  branch_dialog.rs  branch_health_panel.rs  cache.rs  command_palette.rs  commit_panel.rs  confirm_dialog.rs  create_pr_dialog.rs  detail_panel.rs  file_history_view.rs  github_api.rs  github_data_service.rs  github_device_flow.rs  interactive_rebase.rs  issues_panel.rs  lib.rs  markdown_view.rs  prs_panel.rs  reflog_view.rs  rename_dialog.rs  repo_clone_dialog.rs  repo_opener.rs  search_panel.rs  settings_modal.rs  shortcuts_help.rs  sidebar.rs  splash_screen.rs  stash_branch_dialog.rs  stash_save_dialog.rs  stashes_panel.rs  status_bar.rs  submodule_view.rs  tag_dialog.rs  theme_editor.rs  theme_editor_dialog.rs  time.rs  title_bar.rs  toast.rs  (+3 more)
crates/rgitui_workspace/src/settings_window/: channel.rs  events.rs  mod.rs  view.rs  window.rs  window_options.rs
crates/rgitui_workspace/src/workspace/: commands.rs  events.rs  key_handler.rs  layout.rs  mod.rs  operations.rs  state.rs  tabs.rs  undo.rs  update_checker.rs
memory/: 2026-04-09.md
script/: bundle-linux.sh  bundle-mac.sh  bundle-windows.ps1
scripts/: build-install.sh  headless-smoke-test.sh  screenshot.sh
