[workspace]
resolver = "2"
members = [
    "crates/rgitui",
    "crates/rgitui_theme",
    "crates/rgitui_ui",
    "crates/rgitui_workspace",
    "crates/rgitui_git",
    "crates/rgitui_graph",
    "crates/rgitui_diff",
    "crates/rgitui_ai",
    "crates/rgitui_settings",
]
default-members = ["crates/rgitui"]

[workspace.package]
edition = "2021"
publish = false
license = "MIT"
repository = "https://github.com/noahbclarkson/rgitui"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"

[workspace.dependencies]
# GPUI framework (from Zed repository)
gpui = { git = "https://github.com/zed-industries/zed.git", rev = "f3fb4e04aa85dbbde6e83d28f231fc452cd8863f" }
gpui_platform = { git = "https://github.com/zed-industries/zed.git", rev = "f3fb4e04aa85dbbde6e83d28f231fc452cd8863f", features = ["font-kit", "x11", "wayland"] }
http_client = { git = "https://github.com/zed-industries/zed.git", rev = "f3fb4e04aa85dbbde6e83d28f231fc452cd8863f" }
reqwest_client = { git = "https://github.com/zed-industries/zed.git", rev = "f3fb4e04aa85dbbde6e83d28f231fc452cd8863f" }

# Internal crates
rgitui_theme = { path = "crates/rgitui_theme" }
rgitui_ui = { path = "crates/rgitui_ui" }
rgitui_workspace = { path = "crates/rgitui_workspace" }
rgitui_git = { path = "crates/rgitui_git" }
rgitui_graph = { path = "crates/rgitui_graph" }
rgitui_diff = { path = "crates/rgitui_diff" }
rgitui_ai = { path = "crates/rgitui_ai" }
rgitui_settings = { path = "crates/rgitui_settings" }

# Core
anyhow = "1"
similar = "2.6"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
smallvec = { version = "1", features = ["union"] }

# Git
git2 = "0.20"

# Async
futures = "0.3"
async-channel = "2"
smol = "2"

# FS watching
notify = "8"

# Utils
dirs = "6"
uuid = { version = "1", features = ["v4"] }
md5 = "0.7"
rust-embed = "8"
semver = "1"
urlencoding = "2"

[patch.crates-io]
async-task = { git = "https://github.com/smol-rs/async-task.git", rev = "b4486cd71e4e94fbda54ce6302444de14f4d190e" }
calloop = { git = "https://github.com/zed-industries/calloop" }

[profile.dev]
incremental = true

[profile.dev.package]
gpui_macros = { opt-level = 3 }
derive_refineable = { opt-level = 3 }
taffy = { opt-level = 3 }
resvg = { opt-level = 3 }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
