[package]
name = "rgitui"
version = "0.2.0"
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "rgitui"
path = "src/main.rs"

[dependencies]
gpui.workspace = true
gpui_platform.workspace = true
rgitui_theme.workspace = true
rgitui_ui.workspace = true
rgitui_workspace.workspace = true
rgitui_git.workspace = true
rgitui_settings.workspace = true
rgitui_ai.workspace = true
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
git2.workspace = true
http_client.workspace = true
reqwest_client.workspace = true
rust-embed.workspace = true

[dev-dependencies]
git2.workspace = true
chrono.workspace = true
rgitui_git.workspace = true
tempfile = "3.27.0"

[build-dependencies]
winresource = "0.1.31"

[package.metadata.deb]
maintainer = "Noah Clarkson <noah@noahbclarkson.com>"
copyright = "MIT, Noah Clarkson"
license-file = ["../../LICENSE"]
extended-description = "rgitui is a GPU-accelerated Git client built with GPUI, featuring a commit graph, diff viewer, interactive rebase, AI commit messages, and more."
depends = "$auto"
section = "vcs"
priority = "optional"
assets = [
  ["../../target/release/rgitui", "usr/bin/", "755"],
  ["resources/linux/rgitui.desktop", "usr/share/applications/", "644"],
  ["resources/linux/com.rgitui.app.metainfo.xml", "usr/share/metainfo/", "644"],
  ["../../assets/icons/app-icon-16.png",  "usr/share/icons/hicolor/16x16/apps/rgitui.png",   "644"],
  ["../../assets/icons/app-icon-32.png",  "usr/share/icons/hicolor/32x32/apps/rgitui.png",   "644"],
  ["../../assets/icons/app-icon-48.png",  "usr/share/icons/hicolor/48x48/apps/rgitui.png",   "644"],
  ["../../assets/icons/app-icon-256.png", "usr/share/icons/hicolor/256x256/apps/rgitui.png", "644"],
  ["../../assets/icons/app-icon-512.png", "usr/share/icons/hicolor/512x512/apps/rgitui.png", "644"],
  ["../../assets/icons/app-icon.svg",     "usr/share/icons/hicolor/scalable/apps/rgitui.svg", "644"],
]
