[package]
name = "rgitui_ai"
version = "0.1.6"
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
gpui.workspace = true
http_client.workspace = true
rgitui_settings.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
futures.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
