[package]
name = "rgitui_diff"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
similar.workspace = true
gpui.workspace = true
rgitui_theme.workspace = true
rgitui_ui.workspace = true
rgitui_git.workspace = true
rgitui_settings.workspace = true
anyhow.workspace = true
syntect = { version = "5.3", default-features = false, features = ["default-fancy"] }
