[package]
name = "rgitui_graph"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui.workspace = true
rgitui_theme.workspace = true
rgitui_ui.workspace = true
rgitui_git.workspace = true
git2.workspace = true
smallvec.workspace = true
anyhow.workspace = true
log.workspace = true
chrono.workspace = true
