[package]
name = "rgitui_graph"
version = "0.1.4"
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
gpui.workspace = true
rgitui_theme.workspace = true
rgitui_ui.workspace = true
rgitui_git.workspace = true
rgitui_settings.workspace = true
git2.workspace = true
smallvec.workspace = true
anyhow.workspace = true
log.workspace = true
chrono.workspace = true
smol.workspace = true
