[package]
name = "rgitui_theme"
version = "0.1.5"
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
gpui.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
log.workspace = true
dirs.workspace = true
rgitui_settings.workspace = true
