[package]
name = "rgitui_workspace"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui.workspace = true
rgitui_theme.workspace = true
rgitui_ui.workspace = true
rgitui_git.workspace = true
rgitui_graph.workspace = true
rgitui_diff.workspace = true
rgitui_ai.workspace = true
rgitui_settings.workspace = true
git2.workspace = true
chrono.workspace = true
anyhow.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
smallvec.workspace = true
md5.workspace = true
http_client.workspace = true
futures.workspace = true
rfd = "0.17.2"
pulldown-cmark = "0.13.1"
